--- a/Frogger/Frogger.vcxproj
+++ b/Frogger/Frogger.vcxproj
@@ -95,8 +95,10 @@
     <ClCompile Include="Level.cpp" />
     <ClCompile Include="LevelBackground.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Menu.cpp" />
     <ClCompile Include="MenuState.cpp" />
     <ClCompile Include="MusicClip.cpp" />
+    <ClCompile Include="Slider.cpp" />
     <ClCompile Include="SoundClip.cpp" />
     <ClCompile Include="SoundManager.cpp" />
     <ClCompile Include="Sprite.cpp" />
@@ -111,10 +113,13 @@
     <ClInclude Include="Engine.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GameState.h" />
+    <ClInclude Include="GlobalGameConfig.h" />
     <ClInclude Include="Level.h" />
     <ClInclude Include="LevelBackground.h" />
+    <ClInclude Include="Menu.h" />
     <ClInclude Include="MenuState.h" />
     <ClInclude Include="MusicClip.h" />
+    <ClInclude Include="Slider.h" />
     <ClInclude Include="SoundClip.h" />
     <ClInclude Include="SoundManager.h" />
     <ClInclude Include="Sprite.h" />
