Commmit Merge Test

--- a/Frogger/Frogger.vcxproj
+++ b/Frogger/Frogger.vcxproj
@@ -91,16 +91,15 @@
     <ClCompile Include="DrawManager.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="GameObjectManager.cpp" />
     <ClCompile Include="GameState.cpp" />
+    <ClCompile Include="Input.cpp" />
+    <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="Level.cpp" />
     <ClCompile Include="LevelBackground.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Menu.cpp" />
     <ClCompile Include="MenuState.cpp" />
-    <ClCompile Include="MusicClip.cpp" />
-    <ClCompile Include="Slider.cpp" />
-    <ClCompile Include="SoundClip.cpp" />
-    <ClCompile Include="SoundManager.cpp" />
+    <ClCompile Include="PlayerObject.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="SpriteManager.cpp" />
     <ClCompile Include="StateManager.cpp" />
@@ -112,16 +111,14 @@
     <ClInclude Include="DrawManager.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="GameObject.h" />
+    <ClInclude Include="GameObjectManager.h" />
     <ClInclude Include="GameState.h" />
-    <ClInclude Include="GlobalGameConfig.h" />
+    <ClInclude Include="Input.h" />
+    <ClInclude Include="InputManager.h" />
     <ClInclude Include="Level.h" />
     <ClInclude Include="LevelBackground.h" />
-    <ClInclude Include="Menu.h" />
     <ClInclude Include="MenuState.h" />
-    <ClInclude Include="MusicClip.h" />
-    <ClInclude Include="Slider.h" />
-    <ClInclude Include="SoundClip.h" />
-    <ClInclude Include="SoundManager.h" />
+    <ClInclude Include="PlayerObject.h" />
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="SpriteManager.h" />
     <ClInclude Include="State.h" />
