--- a/Frogger/Frogger.vcxproj.filters
+++ b/Frogger/Frogger.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClCompile Include="PlayerObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GlobalGameConfig.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine.h">
